Fixes #30 - Many sections should appear centered but instead are shown aligned to the left For example in Sponsors, the Want to become a sponsor? section

--- a/_assets/css/_generic.scss
+++ b/_assets/css/_generic.scss
@@ -235,6 +235,10 @@ table.no-underline a {
         }
       }
     }
+    .become-sponsor,
+    .faq h2 {
+      text-align: center;
+    }
   }
 }
 
